--- a/roles/create_kibana_container/tasks/main.yaml
+++ b/roles/create_kibana_container/tasks/main.yaml
@@ -12,11 +12,11 @@
 
 - name: Check that a page kibana returns successfully 
   ansible.builtin.uri:
-    url: http://{{ ansible_host }}:{{ docker_container_kibana_port }}/app/kibana#/home
+    url: http://{{ ansible_host }}:{{ docker_container_kibana_port }}/api/status
     method: GET
   register: _result
-  until: _result.status == 200
-  retries: 720 
+  until: _result.status == 200 and _result.json.status.overall.state == 'green'
+  retries: 60
   delay: 10
 
 - name: POST import kibana v7.7.0 dashboard
