add role delete containers

--- a/create_docker_containers_stack_elkf.yaml
+++ b/create_docker_containers_stack_elkf.yaml
@@ -8,3 +8,5 @@
     - create_elasticsearch_container
     - create_logstash_container
     - create_kibana_container
+  tags: 
+    - create_containers
