--- a/roles/create_logstash_container/defaults/main.yml
+++ b/roles/create_logstash_container/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-path_with_logstash_yaml: ./container_dirs/logstash_dir/logstash.yaml
+path_with_logstash_yml: ./container_dirs/logstash_dir/logstash.yml
 path_with_logstash_conf: ./container_dirs/logstash_dir/logstash.conf
 path_with_logs_file_logstash: ./logs_file/logs_file_logstash
 user_for_docker_container_logstash: root
